--- a/G00374677/package.json
+++ b/G00374677/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
+    "angular-cli-ghpages": "^0.6.2",
     "cordova-plugin-advanced-http": "2.4.1",
     "cordova-plugin-geolocation": "4.0.2",
     "cordova-sqlite-storage": "5.0.0",
